fixed overflow in pagination

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,8 +85,8 @@ hr {
   color: #dedede;
 }
 img {
-  width: 100%;
 }
+/*width: 100%; */
 a {
   color: #777;
   background-color: transparent;
